2014-06-24  László Langó  <llango.u-szeged@partner.samsung.com>

        [JavaScriptCore] Enable concurrent JIT on EFL.
        https://bugs.webkit.org/show_bug.cgi?id=134242

        Reviewed by Csaba Osztrogonác.

        * wtf/Platform.h:

2014-06-23  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Replace RefPtr<Evas_Object> with UniquePtrEfl
        https://bugs.webkit.org/show_bug.cgi?id=134236

        Reviewed by Gyuyoung Kim.

        Although there are ref/unref for Evas_Object, it's bit odd so we should call evas_object_del to destroy it.
        So, this patch replaced RefPtr<Evas_Object> with UniquePtrEfl for the simplicity.

        * wtf/PlatformEfl.cmake: Removed RefPtrEfl.cpp from source list.
        * wtf/efl/RefPtrEfl.cpp: Removed.
        * wtf/efl/RefPtrEfl.h: Removed.

2014-06-21  Brady Eidson  <beidson@apple.com>

        Gamepad API - Deprecate the existing implementation
        https://bugs.webkit.org/show_bug.cgi?id=134108

        Reviewed by Timothy Hatcher.

        -Add new "GAMEPAD_DEPRECATED" build flag, moving the existing implementation to use it
        -Move some implementation files into a "deprecated" subdirectory.

        * wtf/FeatureDefines.h:

2014-06-21  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r170244.
        https://bugs.webkit.org/show_bug.cgi?id=134157

        GTK/EFL bindings generator works differently, making this
        patch not work there.  Will fix entire patch after a rollout.
        (Requested by bradee-oh on #webkit).

        Reverted changeset:

        "Gamepad API - Deprecate the existing implementation"
        https://bugs.webkit.org/show_bug.cgi?id=134108
        http://trac.webkit.org/changeset/170244

2014-06-21  Brady Eidson  <beidson@apple.com>

        Gamepad API - Deprecate the existing implementation
        https://bugs.webkit.org/show_bug.cgi?id=134108

        Reviewed by Timothy Hatcher.
